<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">中科腐蚀</string>
    <string name="main_title">分组</string>

    <string name="login_title">登录</string>
    <string name="dev_login_id">手机或者邮箱</string>
    <string name="dev_login_password">密码</string>
    <string name="dev_confirm">确认</string>
    <string name="dev_login_register">记住密码</string>
    
    <string name="user_verification_error">下线通知</string>
    <string name="user_verification_error_content">你的账号在其他设备登录。如非本人操作，则密码可能已泄密。建议紧急修改密码或冻结帐号。</string>
    <string name="search_no_data_title">暂时没有数据</string>
    <string name="search_no_data_subtitle">现在您要看的数据暂时没有，希望您体验得愉快。</string>
    <string name="loading">正在加载…</string>
    <string name="sticky_default_title">确认</string>
    
    <string name="msg_title_exit_app">退出</string>
    <string name="msg_confirm_exit_app">您确定要退出程序吗?</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    
    <string name="error_tag_gs_empty">格式不对</string>
    
    <string name="push_title">通知</string> 
    <string name="push_history_title">通知记录</string>
    
    <string name="group_default_name">非分组</string>
    <string name="value_time">测试时间</string>
    <string name="device_type0">恒电位仪</string>
    <string name="device_type1">智能测试桩</string>
    <string name="histo_potential">电位</string>
    <string name="histo_current">电流</string>
    <string name="histo_voltage">电压</string>
    <string name="histo_potential1">参比电位</string>
    <string name="histo_current1">交流电压</string>
    <string name="histo_voltage1">电池电压</string>
</resources>
