<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_group0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_weight="1"
            android:background="@drawable/bg_tab"
            android:button="@null"
            android:gravity="center"            
            android:text="@string/device_type0"
            android:textColor="@color/text_gray_red" />

        <RadioButton
            android:id="@+id/rb_group1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_tab"
            android:button="@null"
            android:gravity="center"            
            android:text="@string/device_type1"
            android:textColor="@color/text_gray_red" />
    </RadioGroup>

    <ListView
        android:id="@+id/loader_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:divider="@color/c_gray_4"
        android:dividerHeight="@dimen/line_thickness"
        android:drawSelectorOnTop="true"
        android:listSelector="?android:selectableItemBackground" >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="44dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <com.dtu.android.views.EmptyResults
                android:id="@+id/empty_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:title="@string/search_no_data_title"
                app:subTitle="@string/search_no_data_subtitle" >

            </com.dtu.android.views.EmptyResults>

        </RelativeLayout>

        <com.dtu.android.views.StickyButton
            android:id="@+id/sticky_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:stickyBackgroundDrawble="@drawable/canonical_cachi_button_selector"
            app:stickyButtonTitle="@string/sticky_default_title" >
        </com.dtu.android.views.StickyButton>

    </LinearLayout>

</FrameLayout>
